Updated to version 0.5
New:
        tircd will now check for it's config file in the following locations (thanks to @mikegrb for the suggestion & patch).
                path specified on the command line
                tircd.cfg (in the current directory)
                ~/.tircd

        tircd now gives +o to your own account, not that it means much.

Fixed:
        Wrapped all Twitter api calls in eval { } to trap errors from twitter's broken API. Hopefully this + Net::Twitter v1.23 will finally stop the JSON related crashes.

        Removed Date::Manip as a requirement.
                Also removed the timezone config file option as it's no longer needed.

        Fixed the decoding of < and > in twitter api calls;

        Fixed topic being blanked out if twitter api fails during a status update.

        Fixed server issuing the wrong irc response when trying to /invite a non-existant user



git-svn-id: http://tircd.googlecode.com/svn/trunk@11 4ab6f0a6-dacb-11dd-a297-4fb579711a53

--- a/tircd.cfg
+++ b/tircd.cfg
@@ -13,8 +13,8 @@ port 6667
 # Updating the timeline takes 2 calls, while direct messages takes 1  
 # It's a good idea to ensure your settings don't cause tircd to make more calls than that our you'll get errors
 # The default settings will cause ~ 60 calls per hour
-update_timeline 180;
-update_directs 180;
+update_timeline 180
+update_directs 180
 
 # This controls how POE logs data
 # Current options for logtype are 'stdout', 'stderr', 'file', or 'none', 
