Getting ready for version .6
git-svn-id: http://tircd.googlecode.com/svn/trunk@13 4ab6f0a6-dacb-11dd-a297-4fb579711a53

--- a/tircd.cfg
+++ b/tircd.cfg
@@ -16,6 +16,19 @@ port 6667
 update_timeline 180
 update_directs 180
 
+# This controls how we handle tweets longer than 140 characters. There are three options
+# ignore - This is the default behavior, tircd will not do any checking and just pass what is entered to twitter.  Twitter will automatically cut off messages longer than 140 chars.
+# warn   - tircd will warn you that the message was too long, and it will not be sent.
+# split  - tircd will split your message into multiple tweets.  The min_length setting is the minimum length a split message has to be to send.  This keeps tircd from sending a 1 character tweet if you had entered 141 characters.
+# Be careful with the split option, it can send many twitters at once if you enter a long message, and annoy your followers.
+long_messages ignore
+min_length 20
+
+# This controls how tircd behaves when you join #twitter. 
+# 0 - This is the default behaivor, when joining #twitter, you will receive the 20 most recent updates, @replies, and dms.
+# 1 - tircd will be silent when joining the channel, and only show new messages / dms as they come in.
+join_silent 0
+
 # This controls how POE logs data
 # Current options for logtype are 'stdout', 'stderr', 'file', or 'none', 
 # If file is chosen logfile must be set to a path for the log file
