--- a/tircd.cfg
+++ b/tircd.cfg
@@ -8,6 +8,23 @@
 address 127.0.0.1
 port 6667
 
+# This controls where tircd will store it's configuration data
+# This is used to store per-user preferences and channel lineups
+# If not set, data will not be saved between user sessions
+storage_path /tmp/tircd
+
+# This controls how POE logs data
+# Current options for logtype are 'stdout', 'stderr', 'file', or 'none', 
+# If file is chosen logfile must be set to a path for the log file
+logtype stdout
+logfile tircd.log
+
+# This option turns on lots of extra debugging.  The default setting is 0 or off.
+debug 0
+
+# All settings below this line are user configurable. Settings below will be used as defaults until a user opts to change them
+# See the /stats command for settings these parameters on a per-user basis
+
 # This controls how often we check with twitter for updates (in seconds)
 # Currently The twitter API enforces a limit of 100 api calls per hour
 # Updating the timeline takes 2 calls, while direct messages takes 1  
@@ -15,6 +32,9 @@ port 6667
 # The default settings will cause ~ 60 calls per hour
 update_timeline 180
 update_directs 180
+
+# This controls how many updates we'll ask from twitter at a time.  Valid values are 1 to 200.  The default is 20
+timeline_count 20
 
 # This controls how we handle tweets longer than 140 characters. There are three options
 # ignore - This is the default behavior, tircd will not do any checking and just pass what is entered to twitter.  Twitter will automatically cut off messages longer than 140 chars.
@@ -29,11 +49,3 @@ min_length 20
 # 1 - tircd will be silent when joining the channel, and only show new messages / dms as they come in.
 join_silent 0
 
-# This controls how POE logs data
-# Current options for logtype are 'stdout', 'stderr', 'file', or 'none', 
-# If file is chosen logfile must be set to a path for the log file
-logtype stdout
-logfile tircd.log
-
-# This option turns on lots of extra debugging.  The default setting is 0 or off.
-debug 0
