Pretty for 0.9 release
git-svn-id: http://tircd.googlecode.com/svn/trunk@24 4ab6f0a6-dacb-11dd-a297-4fb579711a53

--- a/tircd.cfg
+++ b/tircd.cfg
@@ -49,3 +49,14 @@ min_length 20
 # 1 - tircd will be silent when joining the channel, and only show new messages / dms as they come in.
 join_silent 0
 
+#Until 0.9 tircd would filter out messages sent by you from other clients, so only traffic sent from irc would show.
+#You can now set this as an option, if you want to see your update from other clients, set this to 0.  1 is the default and previous behaivor
+filter_self 1
+
+#tircd will use the tinyurl api to automatically shorten URLs in your tweets if this is set to one.
+#You must also have the URI::Find module installed so tircd can extract the URLs from your message
+shorten_urls 1
+
+#If set tircd will concert <username>: <msg> replies into @<username> <msg> replies so you can use your irc client's tab complettion to send twitter apis
+#Currently '<username>: ' must be at the start of the message, and the user must be in #twitter for this to work.
+convert_irc_replies 0
