Moved the warning for long messages to the right spot, now that we are possibly shortening urls
git-svn-id: http://tircd.googlecode.com/svn/trunk@25 4ab6f0a6-dacb-11dd-a297-4fb579711a53

--- a/tircd.cfg
+++ b/tircd.cfg
@@ -50,7 +50,8 @@ min_length 20
 join_silent 0
 
 #Until 0.9 tircd would filter out messages sent by you from other clients, so only traffic sent from irc would show.
-#You can now set this as an option, if you want to see your update from other clients, set this to 0.  1 is the default and previous behaivor
+#You can now set this as an option, if you want to see your update from other clients, set this to 0.  1 is the default and previous behaivor.
+#Note: this can cause duplicate messages to show, as timeline updates can be delayed coming back from twitter.
 filter_self 1
 
 #tircd will use the tinyurl api to automatically shorten URLs in your tweets if this is set to one.
